Multitenant with sso is working