@@ -1,11 +1,9 @@
 package com.yourcompany.multitenant.controller;
 
-import com.yourcompany.multitenant.model.SSOConfig;
-import com.yourcompany.multitenant.model.SSOProvider;
-import com.yourcompany.multitenant.model.Tenant;
-import com.yourcompany.multitenant.model.User;
+import com.yourcompany.multitenant.model.*;
 import com.yourcompany.multitenant.repository.SSOConfigRepository;
 import com.yourcompany.multitenant.repository.UserRepository;
+import com.yourcompany.multitenant.security.JwtTokenProvider;
 import com.yourcompany.multitenant.service.TenantService;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
@@ -21,9 +19,7 @@ import javax.xml.parsers.DocumentBuilderFactory;
 import java.io.ByteArrayOutputStream;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.Base64;
-import java.util.Collections;
-import java.util.Optional;
+import java.util.*;
 import java.util.zip.Deflater;
 import java.util.zip.DeflaterOutputStream;
 
@@ -33,48 +29,52 @@ import java.util.zip.DeflaterOutputStream;
 @RequiredArgsConstructor
 public class SAMLSSOController {
 
+    private final TenantService tenantService;
     private final SSOConfigRepository ssoConfigRepository;
     private final UserRepository userRepository;
-    private final TenantService tenantService;
+    private final JwtTokenProvider jwtTokenProvider;
 
     @GetMapping("/login")
     public String samlLogin(HttpServletRequest request) {
         try {
-            Tenant tenant = tenantService.getCurrentTenant();
-            Optional<SSOConfig> configOpt = ssoConfigRepository.findByTenantAndProvider(tenant, SSOProvider.SAML);
+            final Tenant tenant = tenantService.getCurrentTenant();
+            Optional<SSOConfig> cfgOpt = ssoConfigRepository.findByTenantAndProvider(tenant, SSOProvider.SAML);
 
-            if (configOpt.isEmpty() || !configOpt.get().getEnabled() || configOpt.get().getSamlSsoUrl() == null) {
+            if (cfgOpt.isEmpty() || !Boolean.TRUE.equals(cfgOpt.get().getEnabled()) || cfgOpt.get().getSamlSsoUrl() == null) {
                 return "redirect:/login.html?error=saml_not_configured";
             }
 
-            SSOConfig config = configOpt.get();
-            String baseUrl = request.getRequestURL().toString().replace(request.getRequestURI(), request.getContextPath());
-            String acsUrl = config.getSamlAcsUrl() != null ? config.getSamlAcsUrl() : baseUrl + "/sso/saml/callback";
-            String issuer = config.getSamlSpEntityId() != null ? config.getSamlSpEntityId() : baseUrl + "/sso/saml/metadata";
+            SSOConfig cfg = cfgOpt.get();
 
-            String authnRequest = String.format("""
+            String baseUrl = request.getRequestURL().toString().replace(request.getRequestURI(), request.getContextPath());
+            String acsUrl = (cfg.getSamlAcsUrl() == null || cfg.getSamlAcsUrl().isBlank())
+                    ? baseUrl + "/sso/saml/callback"
+                    : cfg.getSamlAcsUrl();
+            String issuer = (cfg.getSamlSpEntityId() == null || cfg.getSamlSpEntityId().isBlank())
+                    ? baseUrl + "/sso/saml/metadata"
+                    : cfg.getSamlSpEntityId();
+
+            String authnRequest = """
                 <samlp:AuthnRequest xmlns:samlp="urn:oasis:names:tc:SAML:2.0:protocol"
-                    ID="_12345"
+                    ID="_%s"
                     Version="2.0"
-                    IssueInstant="2025-10-31T12:00:00Z"
+                    IssueInstant="%s"
                     ProtocolBinding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST"
                     AssertionConsumerServiceURL="%s">
                     <saml:Issuer xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion">%s</saml:Issuer>
                     <samlp:NameIDPolicy AllowCreate="true"
                         Format="urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress"/>
                 </samlp:AuthnRequest>
-                """, acsUrl, issuer);
+                """.formatted(UUID.randomUUID(), java.time.Instant.now().toString(), acsUrl, issuer);
 
-            ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
-            Deflater deflater = new Deflater(Deflater.DEFLATED, true);
-            DeflaterOutputStream deflaterStream = new DeflaterOutputStream(byteArrayOutputStream, deflater);
-            deflaterStream.write(authnRequest.getBytes(StandardCharsets.UTF_8));
-            deflaterStream.close();
+            ByteArrayOutputStream out = new ByteArrayOutputStream();
+            try (DeflaterOutputStream ds = new DeflaterOutputStream(out, new Deflater(Deflater.DEFLATED, true))) {
+                ds.write(authnRequest.getBytes(StandardCharsets.UTF_8));
+            }
+            String samlRequest = Base64.getEncoder().encodeToString(out.toByteArray());
+            String encoded = URLEncoder.encode(samlRequest, StandardCharsets.UTF_8);
 
-            String samlRequest = Base64.getEncoder().encodeToString(byteArrayOutputStream.toByteArray());
-            String encodedRequest = URLEncoder.encode(samlRequest, StandardCharsets.UTF_8);
-
-            return "redirect:" + config.getSamlSsoUrl() + "?SAMLRequest=" + encodedRequest;
+            return "redirect:" + cfg.getSamlSsoUrl() + "?SAMLRequest=" + encoded;
 
         } catch (Exception e) {
             log.error("Error initiating SAML login", e);
@@ -86,56 +86,60 @@ public class SAMLSSOController {
     public String samlCallback(@RequestParam(value = "SAMLResponse", required = false) String samlResponse,
                                HttpServletRequest request) {
         try {
-            if (samlResponse == null || samlResponse.isEmpty()) {
+            if (samlResponse == null || samlResponse.isBlank()) {
                 return "redirect:/login.html?error=no_saml_response";
             }
 
-            Tenant tenant = tenantService.getCurrentTenant();
+            final Tenant tenant = tenantService.getCurrentTenant();
 
-            byte[] decodedBytes = Base64.getDecoder().decode(samlResponse);
-            String xml = new String(decodedBytes);
+            byte[] decoded = Base64.getDecoder().decode(samlResponse);
+            String xml = new String(decoded, StandardCharsets.UTF_8);
 
             Document document = DocumentBuilderFactory.newInstance().newDocumentBuilder()
-                    .parse(new java.io.ByteArrayInputStream(xml.getBytes()));
+                    .parse(new java.io.ByteArrayInputStream(xml.getBytes(StandardCharsets.UTF_8)));
             document.getDocumentElement().normalize();
 
-            String email = document.getElementsByTagName("saml:NameID").item(0).getTextContent();
-
-            if (email == null || email.isEmpty()) {
+            String email;
+            if (document.getElementsByTagName("saml:NameID").getLength() > 0) {
+                email = document.getElementsByTagName("saml:NameID").item(0).getTextContent();
+            } else if (document.getElementsByTagName("NameID").getLength() > 0) {
+                email = document.getElementsByTagName("NameID").item(0).getTextContent();
+            } else {
+                email = null;
+            }
+            if (email == null || email.isBlank()) {
                 return "redirect:/login.html?error=invalid_saml_response";
             }
 
-            // Create user if doesn't exist
-            Optional<User> existingUser = userRepository.findByEmail(email);
-            User user = existingUser.orElseGet(() -> {
-                User newUser = new User();
-                newUser.setEmail(email);
-                newUser.setPassword("SSO_USER");
-                newUser.setFirstName("SAML User");
-                newUser.setLastName("SAML User");
-                newUser.setTenant(tenant);
-                return userRepository.save(newUser);
+            final User user = userRepository.findByEmailAndTenant(email, tenant).orElseGet(() -> {
+                User u = User.builder()
+                        .email(email)
+                        .firstName("SSO")
+                        .lastName("User")
+                        .password("{noop}SSO_USER")
+                        .role(Role.END_USER)
+                        .active(true)
+                        .tenant(tenant)
+                        .build();
+                return userRepository.save(u);
             });
 
-            // Set Spring Security context
+            String appToken = jwtTokenProvider.generateToken(
+                    user.getId(), user.getEmail(), user.getRole(), tenant.getId()
+            );
+
             var auth = new UsernamePasswordAuthenticationToken(
-                    user.getEmail(), null,
-                    Collections.singletonList(new SimpleGrantedAuthority(user.getRole().name()))
+                    user.getEmail(), null, List.of(new SimpleGrantedAuthority(user.getRole().name()))
             );
             SecurityContextHolder.getContext().setAuthentication(auth);
 
-            request.getSession().setAttribute("userEmail", user.getEmail());
-            request.getSession().setAttribute("userRole", user.getRole().name());
-            request.getSession().setAttribute("SPRING_SECURITY_CONTEXT", SecurityContextHolder.getContext());
-
-            // Redirect based on role
-            String dashboardUrl = switch (user.getRole()) {
+            String redirectUrl = switch (user.getRole()) {
                 case SUPER_ADMIN -> "/super-admin-dashboard.html";
                 case CUSTOMER_ADMIN -> "/customer-admin-dashboard.html";
                 case END_USER -> "/end-user-dashboard.html";
             };
 
-            return "redirect:" + dashboardUrl;
+            return "redirect:/login.html?token=" + URLEncoder.encode(appToken, StandardCharsets.UTF_8);
 
         } catch (Exception e) {
             log.error("SAML callback error", e);
@@ -148,7 +152,7 @@ public class SAMLSSOController {
     public String metadata(HttpServletRequest request) {
         String baseUrl = request.getRequestURL().toString().replace(request.getRequestURI(), request.getContextPath());
         String entityId = baseUrl + "/sso/saml/metadata";
-        String acsUrl = baseUrl + "/sso/saml/callback";
+        String acsUrl   = baseUrl + "/sso/saml/callback";
 
         return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>"
                 + "<EntityDescriptor xmlns=\"urn:oasis:names:tc:SAML:2.0:metadata\" entityID=\"" + entityId + "\">"
